--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -68,21 +68,21 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/cubes2.jpg" alt="First Slide" id= "imcarousel">
+          <img src="Imagenes/cubes2.jpg" alt="First Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff;">Título de la primera diapositiva</h3>
             <p style="color:#ffffff;">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/cubes2.jpg" alt="Second Slide" id= "imcarousel">
+          <img src="Imagenes/cubes2.jpg" alt="Second Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff">Título de la segunda diapositiva</h3>
             <p style="color:#ffffff">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/cubes2.jpg" alt="Third Slide" id= "imcarousel">
+          <img src="Imagenes/cubes2.jpg" alt="Third Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff">Título de la tercera diapositiva</h3>
             <p style="color:#ffffff">Contenido de la diapositiva</p>
@@ -111,21 +111,21 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/metal2.jpg" alt="First Slide" id= "imcarousel">
+          <img src="Imagenes/metal2.jpg" alt="First Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff" >Título de la primera diapositiva</h3>
             <p style="color:#ffffff" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/metal2.jpg" alt="Second Slide" id= "imcarousel">
+          <img src="Imagenes/metal2.jpg" alt="Second Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff" >Título de la segunda diapositiva</h3>
             <p style="color:#ffffff" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/metal2.jpg" alt="Third Slide" id= "imcarousel">
+          <img src="Imagenes/metal2.jpg" alt="Third Slide" >
           <div class="carousel-caption">
             <h3 style="color:#ffffff" >Título de la tercera diapositiva</h3>
             <p style="color:#ffffff" >Contenido de la diapositiva</p>
