--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" rel="home" href="#" title="">
-                <h2 style=color:black style="background-color:#ead4d7" id="Titulo">Orfebrería</h2>
+                <h2 style=color:black id="Titulo">Orfebrería</h2>
             </a>
             
         </div>
