--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -87,6 +87,14 @@
                         <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
                     </li>
                     <li class="col-sm-3">
+                        <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
+
+                        <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
+
+                        <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
+
+                        <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
+                        
                         <a class="thumbnail" id="carousel-selector-6"><img src="Imagenes/oro.jpg"></a>
                     
                         <a class="thumbnail" id="carousel-selector-7"><img src="Imagenes/oro.jpg"></a>
